# library-management-system

./: .gitignore  README.md
数据库技术/: README.md  docker.sh  init.py  main.py  pyproject.toml  requirements.txt  schema.sql
软件工程/: README.md  docker.sh  start.sh
软件工程/system/book-management-system/: .env.development  README.md  package-lock.json  package.json  vue.config.js
软件工程/system/book-management-system/src/: App.vue  main.js
软件工程/system/book-management-system/src/api/: getBook.js  getBorrow.js  getBorrowHistory.js  getCharge.js  getImportantOperation.js  getUser.js
软件工程/system/book-management-system/src/components/: sidebar.vue  topbar.vue
软件工程/system/book-management-system/src/plugins/: element.js
软件工程/system/book-management-system/src/router/: index.js
软件工程/system/book-management-system/src/styles/: element-variables.scss
软件工程/system/book-management-system/src/utils/: auth.js  request.js
软件工程/system/book-management-system/src/views/: layout.vue  (+3 more)
软件工程/system/book-manager-system/: .env.development  README.md  package-lock.json  package.json
软件工程/system/book-manager-system/src/: main.js
软件工程/work/: .env.example  .gitignore  API.md  pyproject.toml  requirements.txt  run.py  seed.py
软件工程/work/app/: __init__.py  config.py
软件工程/work/app/controllers/: Admin_info.py  Admin_operation_record.py  Book_category.py  Book_info.py  Borrow_info.py  Recharge_deduction_record.py  User.py  __init__.py
软件工程/work/app/models/: __init__.py  models.py
软件工程/work/app/views/: __init__.py  admin.py  book.py  borrow.py  operation.py  recharge.py  user.py  utils.py
(+27 files in other folders)
